support for attackedPiecesFromSquare() in java